# bank-extractor

./: .env  .env.example  .gitignore  Makefile  Memory.md  Process_GIC.qmd  main.py  process_gic.ipynb  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
data/: gic_bronze.csv
docs/history/: 2026-03-21_session.sh  2026-03-28_session.sh
